Fixed author text alignment

--- a/app/less/public/market-detail.less
+++ b/app/less/public/market-detail.less
@@ -29,7 +29,6 @@
         max-width: 200px; // looks good on iP5 emulator
         overflow: hidden;
         text-overflow: ellipsis;
-        float: right; // so it's aligned to right
     }
 
     .tabular {
@@ -42,7 +41,6 @@
         max-width: 165px; // looks good on iP5 emulator
         overflow: hidden;
         text-overflow: ellipsis;
-        float: right; // so it's aligned to right
     }
 }
 
